<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>rtabmap_odom_lite</name>
 <version>0.0.1</version>
 <description> ROS2 nodes to perform SLAM with Intel Realsense2 D435i camera using the RTABMAP library </description>
 <maintainer email="moonmous@gmail.com">user</maintainer>
 <license>TODO: License declaration</license>
 
 <depend>rtabmap</depend>
 <depend>rclcpp</depend>
 <depend>std_msgs</depend>
 <buildtool_depend>ament_cmake</buildtool_depend>

 <test_depend>ament_lint_auto</test_depend>
 <test_depend>ament_lint_common</test_depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>
</package>